# cyto_caricature

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
images/: imgui.ini  logo_1.png~  original_1.tif  presentable_images.pptx
include/: functiondec.h  openglhelper.h
src/: main.cpp
